# Sentinel

./: .dockerignore  .env.example  .env.gemini  .env.vllm  .gitignore  AGENT_RULES.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  DEPLOY.md  Dockerfile  MEMORY.md  README.md  pyproject.toml  record_demo.py
.github/workflows/: biltiq-gates.yml
deploy/: cloudrun.sh  vllm-compose.yml
docs/: CONTEXT.md  GLOSSARY.md  SYSTEM-OVERVIEW.html  SYSTEM-OVERVIEW.md  TESTING.md  WHITEPAPER.md  borrowed-from-agent-os.md  business-analysis.md  memory-quality-plan.md  product-spec.md  srs.md  vnext-reusable-workflows-design.md  vnext-reusable-workflows-plan.md  vnext-reusable-workflows.md
docs/adr/: 0001-a2a-coordinator-and-gemma4-tiering.md  0002-remote-a2a-private-node.md  0003-projects-tasks-eval-store.md  0004-agent-specs-registry-table.md
docs/architecture/: approved-versions.md  diagram.html  diagram.mmd  overview.md  research-platform-and-ui.md  sop-onboarding.md  stack.md
docs/eod/: 2026-06-12.html  2026-06-14.html  2026-06-15.html  2026-06-18.html
docs/intelligence-to-action/: business-analysis.md  competitive-analysis.md  srs.md
docs/specs/: README.md
docs/specs/SENTINEL-001/: design.md  (+2 more)
docs/strategy/: monetization-marketing-gtm.html
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  fetcher.ts  theme.tsx
playbooks/: account-strategy.md  competitor-counterplay.md
src/sentinel/: __main__.py  telemetry.py  worker.py
tests/: benchmark_nutrivault.py  benchmark_nutrivault_results.json  conftest.py  test_013_parallel_extract.py  test_accounts.py  test_artifacts.py  test_boundary.py  test_citations_mine.py  test_compare_plan_guard.py  test_config.py  test_coordinator.py  test_e2e_memory_brain.py  test_e2e_product_research.py  test_gap_fixes.py  test_gateway.py  test_governance.py  test_kb_add_text.py  test_kb_key_cascade.py  test_kb_url_guard.py  test_kb_ux_fixes.py  test_mcp_registry.py  test_mcp_server.py  test_memory.py  test_memory_brain_api.py  test_memory_brain_base.py  test_memory_brain_connectors.py  test_memory_brain_dag_trigger.py  test_memory_brain_entrypoint.py  test_memory_brain_migrations.py  test_memory_brain_recall.py  test_memory_brain_scheduler.py  test_memory_brain_ui.py  test_memory_brain_worker.py  test_memory_reconcile.py  test_orchestrator_hooks.py  test_persist_run_findings.py  test_persona_profiles.py  test_phase0_engine_refactor.py  test_phase1_grader.py  test_phase1_projects_ui.py  (+39 more)
(+163 files in other folders)
