[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Sentinel — Sovereign Intelligence Agent (Google AI Agents Challenge, Track 1: Build)"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]>=2.2.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
sentinel = "sentinel.__main__:main"
sentinel-web = "sentinel.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
