[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Sentinel — Sovereign Intelligence Agent (Google AI Agents Challenge, Track 1: Build)"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]>=2.2.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    # LLM gateway — vLLM / OpenAI-compatible endpoint support
    "litellm>=1.0",
    "openai>=1.0",
    # Knowledge-base pipeline
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    # Web crawler / search tools
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=6.0",
    "httpx>=0.27",
    # Config serialisation
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sentinel = "sentinel.__main__:main"
sentinel-web = "sentinel.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    # ADK 2.2 deprecated SequentialAgent → google.adk.Workflow (migration: SENTINEL-017).
    # The shim in sentinel/agent/_compat.py already suppresses this at instantiation;
    # this entry silences any remaining import-time warnings from ADK internals.
    "ignore::DeprecationWarning:google.adk",
    # pydantic / genai internals
    "ignore::DeprecationWarning:google.genai",
    "ignore:.*BaseAgentConfig.*:DeprecationWarning",
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning",
]
